--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 addons:
   firefox: "41.0"
 before_script:
- - mysql < app/database/helpdesk.sql -uroot
+ - mysql < app/database/helpdesk-TripleA.sql -uroot
  - wget http://getcomposer.org/composer.phar
  - php composer.phar install
  - "sh -e /etc/init.d/xvfb start"
